# robospace

./: .gitignore  CMakeLists.txt  DESIGN.md  Makefile  PHASE1_WRAP_UP.md  PR_STEP8_DESCRIPTION.md  README.md  pyproject.toml
core/: CMakeLists.txt  README.md
core/math/: SE3.cpp  SE3.hpp  SO3.cpp  SO3.hpp  rotation.cpp  se3.cpp  se3.hpp  so3.cpp  transform.cpp  transform.hpp
core/model/: CMakeLists.txt
docs/: DESIGN.md  PHASE1.md  PHASE1_COMPLETE.md  PROGRESS.md  cpp-python-architecture.md  git-workflow-best-practices.md  phase1-detailed-tasks.md  phase1-robot-model-plan.md  robodk-item-pattern-analysis.md  robot_api_analysis.md
include/robospace/: units.hpp
include/robospace/kinematics/: analytical_ik_base.hpp  ik_solver.hpp  numerical_ik.hpp  spherical_wrist_ik.hpp
include/robospace/math/: SE3.hpp  SO3.hpp  rotation.hpp  se3.hpp  so3.hpp
include/robospace/model/: dh_adapter.hpp  dh_params.hpp  entity.hpp  frame.hpp  joint.hpp  kinematic_tree.hpp  link.hpp  robot.hpp  tool.hpp  urdf_parser.hpp
models/UR/: UR5.robospace.json  UR5.urdf
python/: CMakeLists.txt  README.md
python/bindings/: kinematics_bindings.cpp  math_bindings.cpp  model_bindings.cpp  module.cpp
python/examples/: simple_demo.py
python/robospace/: __init__.py
python/tests/: test_basic.py
schemas/: robot-config.schema.json
src/kinematics/: analytical_ik_base.cpp  ik_solver.cpp  numerical_ik.cpp  spherical_wrist_ik.cpp
src/math/: SE3.cpp  SO3.cpp  rotation.cpp  se3.cpp  se3_algebra.cpp  so3.cpp  so3_algebra.cpp  transform.cpp
src/model/: dh_adapter.cpp  dh_params.cpp  entity.cpp  frame.cpp  joint.cpp  kinematic_tree.cpp  link.cpp  robot.cpp  tool.cpp  urdf_parser.cpp
test_data/: simple_2r.urdf
tests/: CMakeLists.txt
tests/cpp/: test_SE3.cpp  test_SO3.cpp  test_dh_adapter.cpp  test_fk_validation.cpp  test_forward_kinematics.cpp  test_frame.cpp  test_ik_ur5.cpp  test_industrial_robots.cpp  test_inverse_kinematics.cpp  test_jacobian.cpp  test_joint_se3_storage.cpp  test_kinematic_tree.cpp  test_model_basic.cpp  test_robot.cpp  test_rotation.cpp  test_se3.cpp  test_so3.cpp  test_transform.cpp  test_units.cpp  test_urdf_parser.cpp
tests/python/: test_basic.py
tests/test_data/: simple_2r_fixed.urdf  simple_2r_swapped.urdf  ur5_simplified.urdf
tests/test_data/fk_reference/: abb_irb_1200_fk_reference.json  abb_irb_6700_fk_reference.json  fanuc_m_20ia_fk_reference.json  kuka_kr_10_r1420_fk_reference.json  ur5_fk_reference.json  yaskawa_gp12_fk_reference.json
