[build-system]
requires = ["scikit-build-core>=0.3.0", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "robospace"
version = "0.1.0"
description = "Modern robotics framework with C++ core and Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Wayne Xiu", email = "wayne.xiu@example.com"}
]
keywords = ["robotics", "kinematics", "dynamics", "planning", "lie-algebra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wayne-xiu/robospace"
Documentation = "https://robospace.readthedocs.io"
Repository = "https://github.com/wayne-xiu/robospace"

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
